--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personajes</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <select id="personaje">
+      <option value="Guerrero">Guerrero</option>
+      <option value="Ninja">Ninja</option>
+      <option value="Mago">Mago</option>
+      <script src="./scripts.js"></script>
+    </select>
+    <div id="root"></div>
+  </body>
+  <footer>asdasdsad</footer>
 </html>
