fix: agregue nuevo contenido en html css y js, luego imgs y posicion

--- a/index.html
+++ b/index.html
@@ -5,15 +5,197 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personajes</title>
+    <!-- FONT AWESOME-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <!--FONT OSWALD-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CUSTOM CSS-->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <select id="personaje">
-      <option value="Guerrero">Guerrero</option>
-      <option value="Ninja">Ninja</option>
-      <option value="Mago">Mago</option>
-      <script src="./scripts.js"></script>
-    </select>
-    <div id="root"></div>
+    <div class="container">
+      <nav class="nav-main">
+        <img src="./img/brand.png" alt="Personajes LOGO" class="nav-brand" />
+        <ul class="nav-menu">
+          <li>
+            <a href="">Web development</a>
+          </li>
+          <li>
+            <a href="">Blockchain</a>
+          </li>
+          <li>
+            <a href="">Artificial Intelligence</a>
+          </li>
+          <li>
+            <a href="">Machine Learning</a>
+          </li>
+          <li>
+            <a href="">Quantum Computing</a>
+          </li>
+          <li>
+            <a href="">Startup</a>
+          </li>
+          <li>
+            <a href="">More</a>
+          </li>
+        </ul>
+        <ul class="nav-menu-right">
+          <li>
+            <a href="#"></a>
+            <i class="fas fa-search"></i>
+          </li>
+        </ul>
+      </nav>
+      <hr />
+
+      <!-- SHOWCASE -->
+      <header class="showcase">
+        <h2>Big News Today</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
+          quo! Tempore ullam harum cum, exercitationem error magnam neque,
+          pariatur magni sit
+        </p>
+        <a href="#" class="btn"
+          >Read More <i class="fas fa-angle-double-right"></i
+        ></a>
+      </header>
+
+      <!-- NEWS CARDS -->
+      <div class="news-cards">
+        <div>
+          <img src="./img/news1.JPG" alt="News 1" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/news2.JPG" alt="News 2" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/news3.JPG" alt="News 3" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/news4.JPG" alt="News 4" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+      </div>
+
+      <section class="cards-banner-one">
+        <div class="content">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
+            pariatur voluptas commodi praesentium accusamus reprehenderit
+            dolorum repudiandae similique quas placeat.
+          </p>
+          <a href="#" class="btn"
+            >Learn More <i class="fas fa-angle-double-right"></i
+          ></a>
+        </div>
+      </section>
+
+      <div class="news-cards">
+        <div>
+          <img src="./img/news1.JPG" alt="News 1" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/news2.JPG" alt="News 2" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/news3.JPG" alt="News 3" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/news4.JPG" alt="News 4" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
+            iure error reiciendis nemo exercitationem tenetur maxime laborum
+            beatae dolorum.
+          </p>
+          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+      </div>
+
+      <section class="cards-banner-two">
+        <div class="content">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis
+            animi aspernatur voluptatum inventore ducimus commodi porro
+            laudantium magnam autem accusantium ipsa impedit soluta, fugiat
+            amet, error reprehenderit similique ut consectetur?
+          </p>
+          <a href="#" class="btn"
+            >Learn More <i class="fas-fa-angle-double-right"></i
+          ></a>
+        </div>
+      </section>
+
+      <section class="social">
+        <p>Follow!</p>
+        <div class="links">
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter"></i> </a
+          ><a href="#">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
