--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personajes</title>
+    <title>Bugs Desert!</title>
     <!-- FONT AWESOME-->
     <link
       rel="stylesheet"
@@ -24,25 +24,25 @@
         <img src="./img/brand.png" alt="Personajes LOGO" class="nav-brand" />
         <ul class="nav-menu">
           <li>
-            <a href="">Web development</a>
+            <a href="">Juego</a>
           </li>
           <li>
-            <a href="">Blockchain</a>
+            <a href="">Comunidad</a>
           </li>
           <li>
-            <a href="">Artificial Intelligence</a>
+            <a href="">Foros</a>
           </li>
           <li>
-            <a href="">Machine Learning</a>
+            <a href="">Mercado</a>
           </li>
           <li>
-            <a href="">Quantum Computing</a>
+            <a href="">Descargas</a>
           </li>
           <li>
-            <a href="">Startup</a>
+            <a href="">Soporte</a>
           </li>
           <li>
-            <a href="">More</a>
+            <a href="">Mi Cuenta</a>
           </li>
         </ul>
         <ul class="nav-menu-right">
@@ -56,11 +56,10 @@
 
       <!-- SHOWCASE -->
       <header class="showcase">
-        <h2>Big News Today</h2>
+        <h2>Nueva Clase</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          quo! Tempore ullam harum cum, exercitationem error magnam neque,
-          pariatur magni sit
+          Lahn:es una maestra de artes marciales entrenada en la dinastía del
+          este.
         </p>
         <a href="#" class="btn"
           >Read More <i class="fas fa-angle-double-right"></i
@@ -71,41 +70,37 @@
       <div class="news-cards">
         <div>
           <img src="./img/news1.JPG" alt="News 1" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <h3>Mystic,Princesa dragon!</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            La Mystic tiene sus orígenes en un pequeño pueblo de Calpheon que
+            fue devastado durante la guerra...
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/news2.JPG" alt="News 2" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <h3>Bruja, La reina del bug!!</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Luego de varios reclamos de nuestros jugadores, hemos nerfeado
+            varias "skils" y balanceado la clase para una me....
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/news3.JPG" alt="News 3" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <h3>Dark knight!!</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Se corrigió el error de la Habilidad "impacto certero" y se
+            modificaron daños en...
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/news4.JPG" alt="News 4" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <h3>Kunoichi, DESPERTADA!!</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Ya esta disponible el nuevo despertar de la clase asesina mas
+            popular del GAME,el despertar no solam...
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
@@ -113,11 +108,11 @@
 
       <section class="cards-banner-one">
         <div class="content">
-          <h2>Lorem, ipsum dolor.</h2>
+          <h2>Evento: CAMPEÓN DE LA ARENA!!!.</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
-            pariatur voluptas commodi praesentium accusamus reprehenderit
-            dolorum repudiandae similique quas placeat.
+            Esta disponible la lista de jugadores que pasaron a la semifinal del
+            campeonato PVP mas grande de "CALPEHON".Con premios suculentos en
+            "PERLAS", esto es lo que dicen los interpretes...
           </p>
           <a href="#" class="btn"
             >Learn More <i class="fas fa-angle-double-right"></i
@@ -127,42 +122,41 @@
 
       <div class="news-cards">
         <div>
-          <img src="./img/news1.JPG" alt="News 1" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <img src="./img/ale1.jpg" alt="ale 1" />
+          <h3>Ganador en PVP del dia 20/03</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Luego de una reñida pelea en la arena de BLACK DESERT pudo quedarse
+            con la victoria. Esto dijieron allegados al ganador:"Es medio tarado
+            pero asi como lo ves...
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/news2.JPG" alt="News 2" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <img src="./img/kino2.jpg" alt="kino 2" />
+          <h3>2do lugar para el usuario"Kainux69"</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Luego de enterarse que fue vencido por puntos en una rara
+            decision.Esta fue la cara de el cuando se entero quien fue el 1ro
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/news3.JPG" alt="News 3" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <img src="./img/juarei4.jpg" alt="jaurei 3" />
+          <h3>Charla con el serio desarrollador del evento!!</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Conociendo mas a fondo a quien fue el responsable de "La Arena" en
+            BLACK DESERT!!,nos brindo unos minutos de su tiempo y esta pose de
+            "guiner" como dice el...
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/news4.JPG" alt="News 4" />
-          <h3>Lorem, ipsum dolor.</h3>
+          <img src="./img/cabezas3.jpg" alt="cabeza 4" />
+          <h3>Los 3ros y 4tos!!</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sunt
-            iure error reiciendis nemo exercitationem tenetur maxime laborum
-            beatae dolorum.
+            Un poco inentendible pero, al enterarse que quedaron eliminados del
+            evento y se les daria como consuelo una botella de "Fernet" como
+            premio consuelo...
           </p>
           <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
         </div>
@@ -170,27 +164,26 @@
 
       <section class="cards-banner-two">
         <div class="content">
-          <h2>Lorem, ipsum dolor.</h2>
+          <h2>Queres anotarte en "LA ARENA"??</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis
-            animi aspernatur voluptatum inventore ducimus commodi porro
-            laudantium magnam autem accusantium ipsa impedit soluta, fugiat
-            amet, error reprehenderit similique ut consectetur?
+            Es muy sencillo.Ingresa haciendo click en el boton de abajo y danos
+            tus datos:Cuenta corriente, numero de CBU, de que cuadro sos
+            hincha,que opinas del Boca de battaglia y porque juega tan mal.El
+            periodo de inscripción comienza la semana entrante.
           </p>
           <a href="#" class="btn"
-            >Learn More <i class="fas-fa-angle-double-right"></i
+            >Join THE ARENA!! <i class="fas-fa-angle-double-right"></i
           ></a>
         </div>
       </section>
 
       <section class="social">
-        <p>Follow!</p>
+        <p>SEGUINOS!!</p>
         <div class="links">
           <a href="#">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i> </a
+          <a href="#"> <i class="fab fa-twitter"></i> </a
           ><a href="#">
             <i class="fab fa-linkedin"></i>
           </a>
