--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="menu-btn">
+      <i class="fas fa-bars fa-2x"></i>
+    </div>
+
     <div class="container">
       <nav class="nav-main">
         <img src="./img/brand.png" alt="Personajes LOGO" class="nav-brand" />
@@ -190,5 +194,114 @@
         </div>
       </section>
     </div>
+
+    <div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="#">
+              <h3>Title one</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">
+              <h3>Title one</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">
+              <h3>Title one</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">
+              <h3>Title one</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+          <li>
+            <a href="#">Blockchain</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <h3>Black Desert Copyright</h3>
+    </footer>
   </body>
 </html>
