--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <nav class="nav-main">
         <img src="./img/brand.png" alt="Personajes LOGO" class="nav-brand" />
-        <ul class="nav-menu">
+        <ul class="nav-menu show">
           <li>
             <a href="">Juego</a>
           </li>
@@ -200,101 +200,101 @@
         <ul>
           <li>
             <a href="#">
-              <h3>Title one</h3>
+              <h3>POLÍTICA DE PRIVACIDAD</h3>
             </a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">TÉRMINOS DE USO</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">CONTÁCTANOS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">SOPORTE</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">CLASES</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">MEDIOS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">AVISO</a>
           </li>
         </ul>
         <ul>
           <li>
             <a href="#">
-              <h3>Title one</h3>
+              <h3>DESCARGAR</h3>
             </a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">CANJEAR CÓDIGOS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">FOROS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">MERCADO</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">PAQUETE 1+1</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">COMUNIDAD</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">MEDIOS</a>
           </li>
         </ul>
         <ul>
           <li>
             <a href="#">
-              <h3>Title one</h3>
+              <h3>CLASES</h3>
             </a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">RELEVOS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">PAIS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">SISTEMAS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">RNG</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">BUGS</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">DROP REPORT</a>
           </li>
         </ul>
         <ul>
           <li>
             <a href="#">
-              <h3>Title one</h3>
+              <h3>RED FOX</h3>
             </a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">SEDES</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">ATENCION AL CLIENTE</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">DONACIÓN</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">BUSCA TRABAJO</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">PERSONAL</a>
           </li>
           <li>
-            <a href="#">Blockchain</a>
+            <a href="#">OFICINAS DE DESARROLLO</a>
           </li>
         </ul>
       </div>
