--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <li>
             <a href="">Mi Cuenta</a>
           </li>
+          <button class="switch" id="switch">
+            <span><i class="fas fa-sun"></i></span>
+            <span><i class="fas fa-moon"></i></span>
+          </button>
         </ul>
         <ul class="nav-menu-right">
           <li>
@@ -65,7 +69,7 @@
           Lahn:es una maestra de artes marciales entrenada en la dinastía del
           este.
         </p>
-        <a href="#" class="btn"
+        <a href="./indexlahn.html" class="btn"
           >Read More <i class="fas fa-angle-double-right"></i
         ></a>
       </header>
