fix: Modifique contenedor leer mas

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             La Mystic tiene sus orígenes en un pequeño pueblo de Calpheon que
             fue devastado durante la guerra...
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/news2.JPG" alt="News 2" />
@@ -92,7 +92,7 @@
             Luego de varios reclamos de nuestros jugadores, hemos nerfeado
             varias "skils" y balanceado la clase para una me....
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/news3.JPG" alt="News 3" />
@@ -101,7 +101,7 @@
             Se corrigió el error de la Habilidad "impacto certero" y se
             modificaron daños en...
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/news4.JPG" alt="News 4" />
@@ -110,7 +110,7 @@
             Ya esta disponible el nuevo despertar de la clase asesina mas
             popular del GAME,el despertar no solam...
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
       </div>
 
@@ -123,7 +123,7 @@
             "PERLAS", esto es lo que dicen los interpretes...
           </p>
           <a href="#" class="btn"
-            >Learn More <i class="fas fa-angle-double-right"></i
+            >Leer Mas!! <i class="fas fa-angle-double-right"></i
           ></a>
         </div>
       </section>
@@ -137,7 +137,7 @@
             con la victoria. Esto dijieron allegados al ganador:"Es medio tarado
             pero asi como lo ves...
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/kino2.jpg" alt="kino 2" />
@@ -146,7 +146,7 @@
             Luego de enterarse que fue vencido por puntos en una rara
             decision.Esta fue la cara de el cuando se entero quien fue el 1ro
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/juarei4.jpg" alt="jaurei 3" />
@@ -156,7 +156,7 @@
             BLACK DESERT!!,nos brindo unos minutos de su tiempo y esta pose de
             "guiner" como dice el...
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
           <img src="./img/cabezas3.jpg" alt="cabeza 4" />
@@ -166,7 +166,7 @@
             evento y se les daria como consuelo una botella de "Fernet" como
             premio consuelo...
           </p>
-          <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
+          <a href="#">Leer Mas!! <i class="fas fa-angle-double-right"></i></a>
         </div>
       </div>
 
