feat: agregue hr a textos footer

--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@
         <ul>
           <li>
             <a href="#">
-              <h3>POLÍTICA DE PRIVACIDAD</h3>
+              <h3>
+                <hr />
+                POLÍTICA DE PRIVACIDAD
+              </h3>
             </a>
           </li>
           <li>
@@ -224,12 +227,16 @@
           </li>
           <li>
             <a href="#">AVISO</a>
+            <hr />
           </li>
         </ul>
         <ul>
           <li>
             <a href="#">
-              <h3>DESCARGAR</h3>
+              <h3>
+                <hr />
+                DESCARGAR
+              </h3>
             </a>
           </li>
           <li>
@@ -249,12 +256,16 @@
           </li>
           <li>
             <a href="#">MEDIOS</a>
+            <hr />
           </li>
         </ul>
         <ul>
           <li>
             <a href="#">
-              <h3>CLASES</h3>
+              <h3>
+                <hr />
+                CLASES Y SUB CLASES
+              </h3>
             </a>
           </li>
           <li>
@@ -274,12 +285,16 @@
           </li>
           <li>
             <a href="#">DROP REPORT</a>
+            <hr />
           </li>
         </ul>
         <ul>
           <li>
             <a href="#">
-              <h3>RED FOX</h3>
+              <h3>
+                <hr />
+                RED FOX
+              </h3>
             </a>
           </li>
           <li>
@@ -299,6 +314,7 @@
           </li>
           <li>
             <a href="#">OFICINAS DE DESARROLLO</a>
+            <hr />
           </li>
         </ul>
       </div>
