feat: agregue logo de copyright a texto footer

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     </div>
 
     <footer class="footer">
-      <h3>Black Desert Copyright</h3>
+      <h3>Black Desert Copyright ©</h3>
     </footer>
   </body>
 </html>
