fix: modifique contenido texto footer

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <a href="#">MERCADO</a>
           </li>
           <li>
-            <a href="#">PAQUETE 1+1</a>
+            <a href="#">"PAQUETE 1 + 1"</a>
           </li>
           <li>
             <a href="#">COMUNIDAD</a>
@@ -281,7 +281,7 @@
             <a href="#">SISTEMAS</a>
           </li>
           <li>
-            <a href="#">RNG</a>
+            <a href="#">R N G</a>
           </li>
           <li>
             <a href="#">BUGS</a>
@@ -311,7 +311,7 @@
             <a href="#">DONACIÓN</a>
           </li>
           <li>
-            <a href="#">BUSCA TRABAJO</a>
+            <a href="#">¿BUSCAS TRABAJO?</a>
           </li>
           <li>
             <a href="#">PERSONAL</a>
