feat: agregue clases y sub clases

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <a href="#">
               <h3>
                 <hr />
-                CLASES Y SUB CLASES
+                "CLASES Y SUB CLASES"
               </h3>
               <hr />
             </a>
